# pike

./: .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTENANCE.md  Makefile  README.md  justfile
.github/workflows/: release.yml  test.yml
plugin_template/: .gitignore  Cargo.toml  _Cargo.toml  build.rs  config.yaml  manifest.yaml.template  picodata.yaml  plugin_config.yaml  topology.toml
plugin_template/migrations/: 0001_init.sql
plugin_template/src/: config.rs  lib.rs  models.rs  service.rs
plugin_template/src/handlers/endpoints/: rpc.rs
plugin_template/tests/: integration.rs  metrics.rs
plugin_template/tests/helpers/: mod.rs
src/: lib.rs  main.rs
src/commands/: clean.rs  enter.rs  lib.rs  mod.rs  new.rs  pack.rs  run.rs  stop.rs
src/commands/config/: apply.rs  mod.rs
src/commands/plugin/: build.rs  mod.rs  new.rs  pack.rs
tests/: build.rs  config.rs  enter.rs  plugin.rs  plugin_new.rs  plugin_pack.rs  plugin_template.rs  run.rs  stop.rs
tests/assets/: corrupted_config.yaml  custom_assets_build.rs  custom_assets_with_targets_build.rs  plugin_config_1.yaml  plugin_config_2.yaml  topology.toml  topology_several_tiers.toml
tests/helpers/: helpers.rs  mod.rs
