[package]
name = "picodata-pike"
version = "0.1.0-rc.1"
edition = "2021"
license = "BSD-2-Clause"
authors = ["Evgeniy Mitin <e.mitin@picodata.io>"]
description = "Cargo plugin for Picodata plugin development"
homepage = "https://picodata.io/"
repository = "https://git.picodata.io/picodata/plugin/cargo-pike"
documentation = "https://git.picodata.io/picodata/plugin/cargo-pike"
keywords = ["picodata", "cargo", "plugin"]
categories = ["development-tools::cargo-plugins"]
readme = "README.md"
rust-version = "1.81.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
include_dir = "0.7"
liquid = "0.26"
tar = "0.4"
flate2 = "1"
serde_yaml = "0.9"
serde_json = "1"
ctrlc = "3.2"
anyhow = "1.0"
colog = "1.3.0"
log = "0.4.22"

[[bin]]
name = "cargo-pike"
path = "src/main.rs"
