[package]
name = "picodata-pike"
version = "2.0.0-rc2"
edition = "2021"
license = "BSD-2-Clause"
authors = [
    "Evgeniy Mitin <e.mitin@picodata.io>",
    "Alexander Morozov <a.morozov@picodata.io>",
]
description = "Cargo plugin for Picodata plugin development"
homepage = "https://picodata.io/"
repository = "https://github.com/picodata/pike"
documentation = "https://github.com/picodata/pike"
keywords = ["picodata", "cargo", "plugin"]
categories = ["development-tools::cargo-plugins"]
readme = "README.md"
rust-version = "1.84"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
include_dir = "0.7"
liquid = "0.26"
tar = "0.4"
flate2 = "1"
serde_yaml = "0.9"
serde_json = "1"
ctrlc = "3.2"
anyhow = "1.0"
colog = "1.3.0"
log = "0.4.25"
fs_extra = "1"
libc = "0.2.169"
nix = "0.29.0"
colored = "3"
rand = "0.9"
derive_builder = "0.20"

[lib]
name = "pike"
path = "src/lib.rs"

[[bin]]
name = "cargo-pike"
path = "src/main.rs"

[dev-dependencies]
constcat = "0.6.0"
