[package]
name = "{{ project_name }}"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
picoplugin = { git = "ssh://git@git.picodata.io/picodata/picodata/picodata.git" } # TODO: change to crates.io

[build-dependencies]
liquid = "0.26"
fs_extra = "1"

[lib]
crate-type = ["cdylib"]
